# virtualcord

./: .gitignore  LICENSE  README.md  assets.json  config.example.ini  main.py  pyproject.toml  requirements.txt
